# jamaica-infrastructure

./: .gitignore  Dockerfile  Pipfile  README.md  README_water.md  config.json  data-categories.csv  environment.yml  pyproject.toml  requirements.txt
incoming_data/osm/: jamaica-210622.osm.pbf.md5
scripts/analysis/: adaptation_estimates.py  adaptation_options_costs.py  analysis_utils.py  benefit_cost_ratio_estimations.py  compute-grid-direct-damages.py  compute-grid-value.py  cyclone_changes_poles.py  damage_calculations.py  damage_loss_setup_script.py  damage_loss_summarised.py  damage_loss_timeseries_and_npv.py  damage_scripts_setup.py  direct_damage_calculations.py  direct_damage_calculations_events.py  direct_damage_calculations_parallel.py  direct_damage_no_threshold_parallel.py  direct_damage_summarise.py  ead_eael_calculations.py  electricity_water_single_point_failure_results_combine.py  expected_damage_loss_no_threshold_setup.py  expected_damage_loss_setup.py  expected_damages_calculations.py  expected_damages_losses_calculations.py  expected_damages_losses_calculations_no_threshold.py  expected_damages_losses_calculations_parallel.py  flood_adaptation_estimates.py  flood_changes_setup.py  loss_damage_timeseries.py  nbs_benefits_coastal.py  nbs_check.py  nbs_damages.py  nbs_damages_setup.py  (+7 more)
workflow/: Snakefile  _adaptation.smk  _criticality.smk  _damage.smk  _etl.smk  _losses.smk  adaptation.smk  check_targets.py  check_workflow.py  config.yml  damage.smk  direct_damages.smk  hazard_layers.csv  hotspots.smk  losses.smk  network_layers.csv  transport_model.smk
(+133 files in other folders)
